# fabric-deployment-mvp

./: .gitignore  Makefile  README.md  azure-pipelines-batch.yml  fabric  pyproject.toml  requirements.txt
archive/fabric-deployment-platform/configs/defaults/: architecture.yaml  environments.yaml
archive/fabric-deployment-platform/configs/schemas/: customer-config.schema.json
archive/fabric-deployment-platform/docs/infrastructure/: fabric_data_pipeline.md  getting_started_with_tf_fabric.md
archive/fabric-deployment-platform/infrastructure/shared/: variables.tf
archive/fabric-deployment-platform/pipelines/: azure-pipelines.yml
archive/fabric-deployment-platform/scripts/: batch_deploy.py  deploy.py  validate.py
archive/fabric-deployment-platform/src/config/: loader.py  schema.py
archive/fabric-deployment-platform/src/deployment/: __init__.py  artifact_manager.py  models.py  report_generator.py  validator.py
archive/fabric-deployment-platform/src/utils/: helpers.py  logger.py
archive/fabric-deployment-platform/tests/unit/: test_config_loader.py  test_deployment_orchestrator.py
archive/fabric-deployment-platform/validation-outputs/: readiness_validation.md
configs/customers/: contoso.yaml
docs/: fabric_data_lakehouse.md  fabric_report.md  fabric_semantic_model.md
fabric-deployment-platform/: requirements.txt
fabric-deployment-platform/configs/customers/beta-test/: base.yaml
fabric-deployment-platform/configs/customers/sample-customer/: base.yaml  deploy-order.yaml
fabric-deployment-platform/configs/schemas/: deploy-order.schema.json  environment.schema.json
fabric-deployment-platform/docs/infrastructure/: Autheticating.md  Microsoft Fabric Provider - Docs Overview.md  fabric_data_lakehouse.md  fabric_data_pipeline.md  fabric_notebook.md  getting_started_with_tf_fabric.md
fabric-deployment-platform/infrastructure/environments/dev/: main.tf  variables.tf
fabric-deployment-platform/infrastructure/environments/prod/: backend.tf  variables.tf
fabric-deployment-platform/infrastructure/environments/test/: backend.tf  main.tf  variables.tf
fabric-deployment-platform/infrastructure/shared/: providers.tf
fabric-deployment-platform/pipelines/: azure-pipelines.yml
fabric-deployment-platform/scripts/: batch_deploy.py  deploy.py  validate.py
fabric-deployment-platform/src/: __init__.py
fabric-deployment-platform/src/config/: __init__.py  loader.py  validator.py
fabric-deployment-platform/src/deployment/: artifact_manager.py  orchestrator.py  terraform_wrapper.py
fabric-deployment-platform/src/utils/: __init__.py
fabric-deployment-platform/validation-outputs/: readiness_validation.json  readiness_validation.md
fabric_deployment_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
predefined-artifacts/contoso/notebooks/: bronze-ingestion.ipynb
predefined-artifacts/contoso/pipelines/: medallion-pipeline.json
scripts/: __init__.py  deploy.py  fabric_cli.py  fabric_deploy.py  fabric_preview.py  fabric_validate.py  validate.py
terraform/: contoso-dev.auto.tfvars.json  main.tf  outputs.tf  secrets.tfvars.example  variables.tf
(+26 files in other folders)
